--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiofiles==24.1.0
+upaiofiles==24.1.0
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
@@ -114,3 +114,4 @@ whitenoise==6.7.0
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.20.0
+pysqlite3-binary==0.5.2
